# ragBackend

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  deps.py  document_store.py  guardrails.py  hf_embeddings.py  main.py  rag_chain.py  schemas.py
app/routes/: chat.py  documents.py
chroma_db/: chroma.sqlite3
data/: documents.json
