[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.5.20",
    "docx2txt==0.8",
    "fastapi==0.115.0",
    "langchain==0.3.7",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.5",
    "langchain-groq==0.2.1",
    "langchain-huggingface==0.1.2",
    "pypdf==5.0.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sentence-transformers==3.2.1",
    "uvicorn[standard]==0.30.6",
]
